convert JVM parameters